--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.7"
+    "react-slick": "^0.29.0",
+    "sass": "^1.69.7",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
