--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.18.0",
+    "lottie-react": "^2.4.0",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-slick": "^0.29.0",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1"
