--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "framer-motion": "^10.18.0",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
