--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@reduxjs/toolkit": "^2.2.6",
     "framer-motion": "^10.18.0",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
@@ -18,6 +19,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.29.0",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1"
