--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,10 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/context/XisaabContex.js"
+    "src/context/XisaabContex.js",
+    "src/context/UsersContext.js",
+    "src/redux/store.js",
+    "src/redux/AllSlices/Xisaabslice.js"
   ],
   "exclude": ["node_modules"]
 }
